# seed-backend-python

./: Makefile  README.md  pyproject.toml
app/: main.py
app/core/: mongodb_client.py  security.py
app/models/: item.py  user.py
app/repositories/: item_mongo_repository.py  user_mongo_repository.py
app/repositories/mongo/: base_mongo_repository.py
app/routers/: item_router.py  token_router.py  user_router.py  websocket_router.py
app/schemas/: user_public.py  user_request.py  user_response.py
app/services/: item_service.py  user_service.py
app/utils/: password_util.py  pydantic_objectid.py
src/: main.py
